fix listing search form spacing

--- a/sass/molecules/listing.scss
+++ b/sass/molecules/listing.scss
@@ -24,7 +24,7 @@
   // background: map-get($colors, purple );
   background: white;
   width: 100%;
-  padding: 28px 60px;
+  padding: 28px 30px;
   box-shadow: 0 2px 12px 0 rgba(0,0,0,0.10);
   text-align: center;
   .title {
@@ -36,8 +36,9 @@
   }
   select {
     outline: none;
-    border: 1px solid black;
+    border: 2px solid black;
     color: black;
+    padding: 5px;
     background: transparent;
     width: 100%;
     display: block;
@@ -51,7 +52,7 @@
   }
   .button {
     // margin: 0px 20px;
-    min-width: 140px;
+    // min-width: 140px;
     &:hover {
       color: map-get($colors, purple );
     }
